--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
     <link rel="stylesheet" href="style.css" />
     <title>les fonctions en JS</title>
   </head>
-  <body></body>
+  <body>
+    <main class="container-fluid p-0 pt-4">
+      <section
+        id="banner"
+        class="my-4 p-5 d-flex flex-column align-items-center"
+      >
+        <h1 class="text-white fw-bold">Les fonctions en JS</h1>
+        <img src="img/javascript.jpg" alt="JS-logo" class="img-fluid" />
+      </section>
+      <section id="introduction" class="p-5"></section>
+      <section id="definition-word" class="p-5"></section>
+      <section id="function-name" class="p-5"></section>
+      <section id="function-params" class="p-5"></section>
+      <section id="function-body" class="p-5"></section>
+      <section id="function-return" class="p-5"></section>
+      <section id="function-call" class="p-5"></section>
+    </main>
+  </body>
   <script src="main.js"></script>
 </html>
