--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
         <h1 class="text-white fw-bold">Les fonctions en JS</h1>
         <img src="img/javascript.jpg" alt="JS-logo" class="img-fluid" />
       </section>
-      <section id="introduction" class="p-5"></section>
+      <section id="introduction" class="p-5">
+        <p>
+          En JavaScript, les fonctions sont des blocs de code essentiels qui
+          permettent d'organiser, réutiliser et structurer la logique d'un
+          programme. Chaque fonction repose sur des éléments fondamentaux, tels
+          que le mot-clé de définition, les paramètres, et la valeur de retour,
+          qui ensemble déterminent son utilité et son efficacité dans
+          l'exécution des tâches.
+        </p>
+      </section>
       <section id="definition-word" class="p-5"></section>
       <section id="function-name" class="p-5"></section>
       <section id="function-params" class="p-5"></section>
