le mot-clé de definition

--- a/index.html
+++ b/index.html
@@ -60,7 +60,20 @@
           l'exécution des tâches.
         </p>
       </section>
-      <section id="definition-word" class="p-5"></section>
+      <section id="definition-word" class="p-5">
+        <h2>1-le mot-clé de definition</h2>
+        <p>
+          En Javascript, on utilise le mot-clé <strong>function</strong> pour
+          déclarer une fonction classique.
+        </p>
+        <pre>
+          <code class="rounded-3">
+            function name(params) {
+  
+            }
+          </code>
+        </pre>
+      </section>
       <section id="function-name" class="p-5"></section>
       <section id="function-params" class="p-5"></section>
       <section id="function-body" class="p-5"></section>
