--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         </p>
       </section>
       <section id="definition-word" class="p-5">
-        <h2>1-le mot-clé de definition</h2>
+        <h2>1- Le mot-clé de definition</h2>
         <p>
           En Javascript, on utilise le mot-clé <strong>function</strong> pour
           déclarer une fonction classique.
         </p>
-        <pre>
+        <pre class="m-0">
           <code class="rounded-3">
             function name(params) {
   
@@ -74,7 +74,24 @@
           </code>
         </pre>
       </section>
-      <section id="function-name" class="p-5"></section>
+      <section id="function-name" class="p-5">
+        <h2>2- Le nom de la fonction</h2>
+        <p>
+          Le nom d'une fonction est son identifiant, utilisé pour l'invoquer
+          ultérieurement. Ce nom doit être <strong>unique</strong> dans son
+          contexte d'utilisation, ne doit pas commencer par un
+          <strong>chiffre</strong>, et ne peut pas contenir
+          <strong>d'espaces</strong>.
+        </p>
+        <pre class="m-0">
+          <code class="rounded-3">
+            // Créons une fonction qui additionne deux valeurs.
+            function addition(params) {
+
+            }
+          </code>
+        </pre>
+      </section>
       <section id="function-params" class="p-5"></section>
       <section id="function-body" class="p-5"></section>
       <section id="function-return" class="p-5"></section>
