--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <title>les fonctions en JS</title>
   </head>
   <body>
-    <main class="container-fluid p-0 pt-4">
+    <main class="container-fluid p-0 pt-1">
       <section
         id="banner"
-        class="my-4 p-5 d-flex flex-column align-items-center"
+        class="my-3 p-5 d-flex flex-column align-items-center"
       >
         <h1 class="text-white fw-bold">Les fonctions en JS</h1>
         <img src="img/javascript.jpg" alt="JS-logo" class="img-fluid" />
@@ -92,7 +92,23 @@
           </code>
         </pre>
       </section>
-      <section id="function-params" class="p-5"></section>
+      <section id="function-params" class="p-5">
+        <h2>3- Les paramètres (ou arguments)</h2>
+        <p>
+          Les paramètres sont les valeurs que nous pouvons passer à une fonction
+          pour qu'elle les utilise. Ils sont définis entre les parenthèses lors
+          de la déclaration de la fonction. une fonction peut avoir zéro, un ou
+          plusieurs paramètres.
+        </p>
+        <pre class="m-0">
+          <code class="rounded-3">
+            // Créons une fonction qui additionne deux valeurs.
+            function name(a,b) {
+
+            }
+          </code>
+        </pre>
+      </section>
       <section id="function-body" class="p-5"></section>
       <section id="function-return" class="p-5"></section>
       <section id="function-call" class="p-5"></section>
