--- a/index.html
+++ b/index.html
@@ -109,7 +109,23 @@
           </code>
         </pre>
       </section>
-      <section id="function-body" class="p-5"></section>
+      <section id="function-body" class="p-5">
+        <h2>4- Le corps de la fonction</h2>
+        <p>
+          C'est la portion de code placée entre les accolades
+          <strong>{ ... }</strong>. <br />
+          Le corps contient les instructions que la fonction doit executer
+          lorsqu'elle est appelée.
+        </p>
+        <pre class="m-0">
+          <code class="rounded-3">
+            // Créons une fonction qui additionne deux valeurs.
+            function addition(a,b) {
+              return a + b
+            }
+          </code>
+        </pre>
+      </section>
       <section id="function-return" class="p-5"></section>
       <section id="function-call" class="p-5"></section>
     </main>
