--- a/index.html
+++ b/index.html
@@ -121,12 +121,28 @@
           <code class="rounded-3">
             // Créons une fonction qui additionne deux valeurs.
             function addition(a,b) {
+              ...
+            }
+          </code>
+        </pre>
+      </section>
+      <section id="function-return" class="p-5">
+        <h2>5- Le mot-clé ruturn</h2>
+        <p>
+          <strong>return</strong> permet à la fonction de renvoyer un resultat.
+          Si return est omis, la fonction retourne par défaut
+          <strong>undefined</strong>. <br />
+          Une fois return éxecuté, <strong>la fonction s'arrête!</strong>
+        </p>
+        <pre class="m-0">
+          <code class="rounded-3">
+            // Créons une fonction qui additionne deux valeurs.
+            function addition(a,b) {
               return a + b
             }
           </code>
         </pre>
       </section>
-      <section id="function-return" class="p-5"></section>
       <section id="function-call" class="p-5"></section>
     </main>
   </body>
