--- a/index.html
+++ b/index.html
@@ -143,7 +143,23 @@
           </code>
         </pre>
       </section>
-      <section id="function-call" class="p-5"></section>
+      <section id="function-call" class="p-5">
+        <h2>6- L'appel de la fonction.</h2>
+        <p>
+          Pour executer la fonction, il faut l'appeler en utilisant son nom
+          suivi de parenthèses, contenant éventuellement des arguments.
+        </p>
+        <pre class="m-0">
+          <code class="rounded-3">
+            // Créons une fonction qui additionne deux valeurs.
+            function addition(a, b) {
+              return a + b;
+            }
+            // Testons la fonction avec deux nombres.
+            console.log(addition(5, 7)); // Affiche 12 dans la console.
+          </code>
+        </pre>
+      </section>
     </main>
   </body>
   <script src="main.js"></script>
