--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
         </p>
         <pre class="m-0">
           <code class="rounded-3">
-            function name(params) {
-  
-            }
+function name(params) {
+}
           </code>
         </pre>
       </section>
@@ -85,10 +84,10 @@
         </p>
         <pre class="m-0">
           <code class="rounded-3">
-            // Créons une fonction qui additionne deux valeurs.
-            function addition(params) {
+// Créons une fonction qui additionne deux valeurs.
+function addition(params) {
 
-            }
+}
           </code>
         </pre>
       </section>
@@ -102,10 +101,10 @@
         </p>
         <pre class="m-0">
           <code class="rounded-3">
-            // Créons une fonction qui additionne deux valeurs.
-            function name(a,b) {
+// Créons une fonction qui additionne deux valeurs.
+function name(a,b) {
 
-            }
+}
           </code>
         </pre>
       </section>
@@ -119,10 +118,10 @@
         </p>
         <pre class="m-0">
           <code class="rounded-3">
-            // Créons une fonction qui additionne deux valeurs.
-            function addition(a,b) {
-              ...
-            }
+// Créons une fonction qui additionne deux valeurs.
+function addition(a,b) {
+  ...
+}
           </code>
         </pre>
       </section>
@@ -136,10 +135,10 @@
         </p>
         <pre class="m-0">
           <code class="rounded-3">
-            // Créons une fonction qui additionne deux valeurs.
-            function addition(a,b) {
-              return a + b
-            }
+// Créons une fonction qui additionne deux valeurs.
+function addition(a,b) {
+  return a + b
+}
           </code>
         </pre>
       </section>
@@ -151,14 +150,31 @@
         </p>
         <pre class="m-0">
           <code class="rounded-3">
-            // Créons une fonction qui additionne deux valeurs.
-            function addition(a, b) {
-              return a + b;
-            }
-            // Testons la fonction avec deux nombres.
-            console.log(addition(5, 7)); // Affiche 12 dans la console.
+// Créons une fonction qui additionne deux valeurs.
+function addition(a, b) {
+  return a + b;
+}
+// Testons la fonction avec deux nombres.
+console.log(addition(5, 7)); // Affiche 12 dans la console.
           </code>
         </pre>
+      </section>
+      <section id="conclusion" class="p-5">
+        <h2 class="text-white mb-4">Conclusion</h2>
+        <ul class="text-white">
+          <li class="mb-3">
+            Les <strong>paramètres</strong> permettent à une fonction d'être
+            flexible et réutilisable avec différentes valeurs.
+          </li>
+          <li class="mb-3">
+            Le mot-clé <strong>return</strong> est essentiel pour récupérer le
+            résultat d'une fonction.
+          </li>
+          <li>
+            Il est important d'utiliser ces concepts de manière appropriée pour
+            écrire du code clair et fonctionnel.
+          </li>
+        </ul>
       </section>
     </main>
   </body>
