--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ function addition(a,b) {
         </pre>
       </section>
       <section id="function-return" class="p-5">
-        <h2>5- Le mot-clé ruturn</h2>
+        <h2>5- Le mot-clé return</h2>
         <p>
           <strong>return</strong> permet à la fonction de renvoyer un resultat.
           Si return est omis, la fonction retourne par défaut
